gccida/c1/choose_hard_reg_mode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1147:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  choose_hard_reg_mode( unsigned int regno, unsigned int nregs) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1149:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1150:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1154:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1158:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1162:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1181:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = ( ( unsigned int)( mode_class_0[v2] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1221:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[v7] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1261:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = ( ( unsigned int)( mode_class_0[v11] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1301:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = ( ( unsigned int)( mode_class_0[v15] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1339:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v22 = ( ( unsigned int)( mode_class_0[v20] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/regclass.c:1355:40: error: use of undeclared identifier 'machine_mode'
if ( ix86_hard_regno_mode_ok( regno, ( machine_mode)v20) ) 
                                       ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_hard_reg_mode/src/obj/regclass.o] Error 1
